...
                  style={{
                    color: "#FFF",
                    fontWeight: "700",
                    fontSize: 12,
                  }}
                >
                  Reject
                </Text>
              )}
            </AppButton>
          </View>
        </AppCard>
        );
...
