...
              {isProcessing ? (
                <ActivityIndicator color="#FFF" size="small" />
              ) : (
                <Text style={styles.buttonText}>
                  {isSeatInv
                    ? intentId
                      ? "Pay Now"
                      : "Accept Invite"
                    : isPaymentRequired
                      ? "Pay Now"
                    : "Approve"}
                </Text>
              )}
...
